--- a/tower-react.client/src/components/styles/EventCard.scss
+++ b/tower-react.client/src/components/styles/EventCard.scss
@@ -3,5 +3,24 @@
         height: 30vh;
         object-fit: cover;
         object-position: center;
+        position: relative;
     }
+}
+
+.event-card::after {
+    // background: inherit;
+    content: "";
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 120px;
+    backdrop-filter: blur(5px);
+}
+
+.event-card-content {
+    // position: absolute;
+    width: 100%;
+    height: 100%;
+    z-index: 1;
 }
