more styling added

--- a/tower-react.client/src/assets/scss/_variables.scss
+++ b/tower-react.client/src/assets/scss/_variables.scss
@@ -9,7 +9,7 @@ $themes: (
     "danger": #ea0606,
     "light": #e9ecef,
     "dark": #2A2D3A,
-    "grey": #cbcbcb,
+    "grey": #d4c6c6,
   ),
   dark: (
     "body-bg": #090f18,
