working on the filter for the background next

--- a/tower-react.client/src/pages/Styles/EventDetailsPage.scss
+++ b/tower-react.client/src/pages/Styles/EventDetailsPage.scss
@@ -1,6 +1,6 @@
 
 
-.image-size {
-    width: 447px;
-    height: 423px;
+.bg-image {
+    backdrop-filter: blur(10px);
+    // background-color: #246c8e72;
 }
