--- a/tower-react.client/src/pages/Styles/EventDetailsPage.scss
+++ b/tower-react.client/src/pages/Styles/EventDetailsPage.scss
@@ -1,6 +1,15 @@
-
+.contain {
+    position: relative;
+    width: 100%;
+    height: 100vh;
+}
 
 .bg-image {
-    backdrop-filter: blur(10px);
-    // background-color: #246c8e72;
+    background-color: #246c8e72;
+    filter:brightness(80%)
+}
+
+.content {
+    position: relative;
+    z-index: 1;
 }
